crates/nidus/tests/ui/injectable_tuple_struct.stderr
error: #[injectable] currently supports named-field structs or unit structs
 --> tests/ui/injectable_tuple_struct.rs:3:1
  |
3 | #[injectable]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `injectable` (in Nightly builds, run with -Z macro-backtrace for more info)
