crates/nidus/tests/ui/injectable_tuple_struct.rs
use nidus::prelude::*;

#[injectable]
struct TupleRepository(Inject<Database>);

struct Database;

fn main() {}
